--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
          <!-- conjunto de caracteres latino-->
  		<meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="stilo.css">
- 		<title>OrangeDev</title>
+ 		<title>BrunoGS</title>
  	</head>
 
     <body style="width: 70%; margin-left: 15% ">
